<resources>
    <string name="app_name">KotlinFirebaseAdsDemo</string>
    <string name="install">Install</string> <!--do not translate-->
    <string name="ad">AD</string> <!-- do not translate-->


    <string name="splash_screen">Splash Screen</string>
    <string name="start_loading">Start Loading</string>

    <string name="no_browser_error">You don\'t have any browser to open web page</string>
    <string name="tap_home">Continue to Home</string>

    <string name="update_msg">Looks like you\'re using an older version,\nUpdate now for less bugs batter performance,\nand the latest features.</string>
    <string name="update_now">Update Now</string>

    <string name="loading">Loading…</string>
    <string name="preparing">Preparing…</string>
    <string name="ready_now">Ready now…</string>
    <string name="select_language">Select Language</string>
    <string name="select_language_first">Select Language First</string>
    <string name="shimmer_ads">Shimmer Ads</string>
    <string name="interstitial_ads">Interstitial Ads</string>
    <string name="rate">Rate</string>
    <string name="change_language">Change Language</string>
    <string name="banner_ad">Banner Ad</string>
    <string name="native_ad">Native Ad</string>
    <string name="native_banner_ad_130">Native Banner Ad 130</string>
    <string name="native_banner_ad_100">Native Banner Ad 100</string>
    <string name="native_banner_ad_80">Native Banner Ad 80</string>
    <string name="native_banner_ad_60">Native Banner Ad 60</string>
    <string name="tap_to_exit">Tap to exit</string>
    <string name="restart">RESTART</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="permission_needed_desc">Give permission to access Notification Permission, app need notification permission for app related new update.</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_required_desc">This app require permission to use Notification. Grant them in app Setting.</string>
    <string name="open_setting">Open Setting</string>
    <string name="request_permission">Request Permission</string>
    <string name="shimmer_ads_card">shimmer\n</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="open_app_short_label">Uninstall</string>
    <string name="open_app_long_label">Uninstall App</string>
    <string name="many_ads">Too many ads</string>
    <string name="app_crash">App crashes frequently</string>
    <string name="performance">Performance issues</string>
    <string name="battery">Battery drain</string>
    <string name="other">Other issues</string>
    <string name="why_uninstall">Why do you uninstall ?</string>
    <string name="cancel">Cancel</string>
    <string name="uninstall">Uninstall</string>
    <string name="write">Write other feedback</string>
    <string name="select_checkbox_or_enter_feedback">Please select at least one option or provide feedback</string>
    <string name="enter_feedback">Please provide feedback</string>
    <string name="please_tell">We’re sorry! Would you like to reduce the number of ads you see?</string>
    <string name="thank">Thanks for feedback</string>
    <string name="no_email">No email client found</string>
    <string name="sorry">We\'re Sorry to See You Go</string>
    <string name="improve">Thank you for trying our app. We appreciate your feedback and will use it to improve.</string>
    <string name="ok">Ok</string>
    <string name="lets">Let\'s try</string>
    <string name="reduce">We’ve reduced the ads for you!</string>
    <string name="no_app_found">No activity found for link</string>
    <string name="banner_Ad">Banner Ads</string>
    <string name="back">back</string>

</resources>