<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.main.MainActivity">

    <!-- Toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- MainView -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/clAdView"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/clToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="15dp"
            android:paddingVertical="15dp">

            <TextView
                android:id="@+id/tvShimmerAdsCard"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_blue_ripple_10"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/shimmer_ads_card"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvShimmerAds"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_blue_ripple_10"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/shimmer_ads"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvShimmerAdsCard"/>


            <TextView
                android:id="@+id/tvInterstitialAds"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_blue_ripple_10"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/interstitial_ads"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvShimmerAds" />

            <TextView
                android:id="@+id/tvRate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_blue_ripple_10"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/rate"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvInterstitialAds" />

            <TextView
                android:id="@+id/tvChangeLanguage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_blue_ripple_10"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/change_language"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvRate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- AdView -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:id="@+id/rlNativeBanner"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/ad_bg_color"
            app:layout_constraintTop_toTopOf="parent">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerLayoutAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shimmer_duration="1500"
                app:shimmer_auto_start="true"
                app:shimmer_dropoff="0.5">

                <include
                    layout="@layout/shimmer_layout_google_native_banner_80"/>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <FrameLayout
                android:id="@+id/flNativeBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>