<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nativeAd"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/ad_bg_color">

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardAdIcon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:cardBackgroundColor="@color/ad_bg_color"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false"
                app:strokeWidth="0dp">

                <ImageView
                    android:id="@+id/adIconClone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    tools:src="@mipmap/ic_launcher" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- AD Tag -->
                <TextView
                    android:id="@+id/tvAdTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/bg_ad_tag"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:paddingVertical="2dp"
                    android:paddingHorizontal="3dp"
                    android:text="@string/ad"
                    android:textColor="@color/ad_tag_text_color"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/adNameClone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColor="@color/ad_text_primary_color"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/app_name" />
            </LinearLayout>

            <TextView
                android:id="@+id/adBodyClone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:lines="2"
                android:maxLines="2"
                android:textColor="@color/ad_text_secondary_color"
                android:textSize="12sp"
                android:text="@string/install" />

        </LinearLayout>

        <TextView
            android:id="@+id/adCallToActionClone"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_ad_btn"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:textAllCaps="true"
            android:textColor="@color/ad_btn_primary_color"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/install" />

    </LinearLayout>

</LinearLayout>