<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nativeAd"
    android:layout_width="match_parent"
    android:layout_height="65dp"

    android:background="@color/ad_bg_color">

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardAdIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardBackgroundColor="@color/ad_bg_color"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                app:cardPreventCornerOverlap="false"
                app:strokeWidth="0dp">

                <ImageView
                    android:id="@+id/adIconClone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    tools:src="@mipmap/ic_launcher" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <!-- AD Tag -->
                    <TextView
                        android:id="@+id/tvAdTag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/bg_ad_tag"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:paddingHorizontal="3dp"
                        android:paddingVertical="2dp"
                        android:text="@string/ad"
                        android:textColor="@color/ad_tag_text_color"
                        android:textSize="10sp" />


                    <!-- Title -->
                    <TextView
                        android:id="@+id/adNameClone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:includeFontPadding="false"
                        android:lines="1"
                        android:maxLines="1"
                        android:text="@string/app_name"
                        android:textColor="@color/ad_text_primary_color"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/adBodyClone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:text="@string/app_name"
                android:textColor="@color/ad_text_secondary_color"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/adCallToActionClone"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_ad_btn"
            android:gravity="center"
            android:includeFontPadding="false"
            android:paddingHorizontal="10dp"
            android:singleLine="true"
            android:text="@string/install"
            android:textAllCaps="true"
            android:textColor="@color/ad_btn_primary_color"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>